PIRATE-4173 removed float preventing image alignment working.

--- a/bkb-dev.less
+++ b/bkb-dev.less
@@ -2809,7 +2809,6 @@ input:focus:-ms-input-placeholder {
         .clearfix;
 
         a {
-            float: none;
             max-width: 100%;
         }
 
