--- a/bkb.less
+++ b/bkb.less
@@ -2715,7 +2715,6 @@ input:focus:-ms-input-placeholder {
         .clearfix;
 
         a {
-            float: none;
             max-width: 100%;
         }
 
