--- a/extended/widgets/image.less
+++ b/extended/widgets/image.less
@@ -7,7 +7,6 @@
         .clearfix;
 
         a {
-            float: none;
             max-width: 100%;
         }
 
